Ultimos ajustaes para el deply a railway. PROYECTO DESPLEGADO!!!

--- a/env.example
+++ b/env.example
@@ -1,12 +1,12 @@
 # Local development environment variables
-PG_USER=your_postgres_user
-PG_HOST=localhost
-PG_PORT=5432
-PG_DATABASE=your_database_name
-PG_PASSWORD=your_postgres_password
+PGUSER=your_postgres_user
+PGHOST=localhost
+PGPORT=5432
+PGDATABASE=your_database_name
+PGPASSWORD=your_postgres_password
 
 # Railway will automatically provide DATABASE_URL in production
 # DATABASE_URL=postgresql://user:password@host:port/database
 
 # Port (Railway will set this automatically)
-PORT=3000
+PORT=3001
